# huffman-ft-uyen

./: .gitignore  Cargo.toml  README.md
data/: output_1.txt  sample_2.txt
huffman/src/: lib.rs
huffman/src/coding/: huffman.rs
huffman/src/errors/: compression_error.rs
huffman/src/models/: huffman_tree.rs
src/: cli.rs  file.rs  main.rs
src/algo/models/: huffman_tree.rs  node.rs
src/coding/: helper.rs  huffman.rs  mod.rs
src/errors/: compression_error.rs  file_error.rs  huffman_error.rs  mod.rs
src/models/: huffman_tree.rs  mod.rs  node.rs
src/services/: cli.rs  compressor.rs  converter.rs  file.rs  mod.rs
src/utils/: mod.rs  type_converting.rs
