[package]
name = "huffman-ft-uyen"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"
members = ["huffman"]

[dependencies]
bitvec = "1.0.1"
env_logger = "0.11.6"
get-size = "=0.1.4"
log = "0.4.26"
samply = "0.13.1"
serde = { version = "1.0.218", features = ["derive"] }
structopt = "0.3.26"
huffman = { path = "huffman" }
